# Todo

./: Cargo.toml  README.md  Rocket.toml  database.sqlite
migrations/2021-06-23-045112_create_todo/: up.sql
src/: main.rs  models.rs  schema.rs
